--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "stylelint": "stylelint \"source/less/**/*.less\" --syntax less",
     "lint": "npm run editorconfig && npm run stylelint",
     "build": "gulp styles",
-    "start": "npx gulp"
+    "start": "gulp"
   },
   "browserslist": [
     "last 2 versions",
