--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/less/**/*.less\" --syntax less",
     "lint": "npm run editorconfig && npm run stylelint",
-    "build": "npm run build",
+    "build": "gulp build",
     "start": "gulp"
   },
   "browserslist": [
